--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -26,6 +26,7 @@ body {
 
     .content-container {
       width: 100%;
+      min-width: 0;
       display: flex;
       flex-direction: column;
     }
